# dsa-course-template

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTRUCTOR_GUIDE.md  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: test-assignments.yml
assignment-descriptions/: README.md
assignment-descriptions/Week4/Implementation aid/Textbook/1- Binary Search Tree/: TestBinarySearchTree.cpp
assignment-descriptions/Week4/Implementation aid/Textbook/2- AVL Tree/: AvlTree.h  TestAvlTree.cpp
assignment-descriptions/Week5/Implementation aid/Implementation aid/1- Separate Chaining/: SeparateChaining.cpp  SeparateChaining.h  TestSeparateChaining.cpp
assignment-descriptions/Week5/Implementation aid/Implementation aid/2- Quadratic Probing/: QuadraticProbing.h  TestQuadraticProbing.cpp
assignment-descriptions/Week5/Implementation aid/Implementation aid/3- Cuckoo Hash Table/: CuckooHashTable.cpp  CuckooHashTable.h  TestCuckooHashTable.cpp  UniformRandom.h
assignment-descriptions/Week7/Implementation aid/: Sort.h  UniformRandom.h
assignments/week01-arrays/: README.md  array_manipulation.cpp  array_operations.cpp  search_algorithms.cpp
assignments/week02-linked-lists/: README.md  doubly_linked_list.cpp  singly_linked_list.cpp
assignments/week03-stacks-queues/: README.md  applications.cpp  queue.cpp  stack.cpp
assignments/week04-trees/: README.md  avl_tree.cpp  binary_search_tree.cpp  main.cpp  tree_applications.cpp
assignments/week05-hash-tables/: README.md  hash_table_chaining.cpp
assignments/week06-sorting/: README.md  basic_sorts.cpp
assignments/week07-graphs/: README.md  graph.cpp
resources/: README.md  cpp-best-practices.md
tests/week01/: test_array_manipulation.cpp  test_array_operations.cpp  test_search_algorithms.cpp
tests/week02/: test_doubly_linked_list.cpp  test_singly_linked_list.cpp
tests/week03/: test_queue.cpp  test_stack.cpp
tests/week04/: test_avl_tree.cpp  test_binary_search_tree.cpp  test_tree_applications.cpp
tests/week05/: test_hash_table.cpp
tests/week06/: test_basic_sorts.cpp
tests/week07/: test_graph.cpp
